新增2个千问工作流，生成图片广告

--- a/user/default/comfy.settings.json
+++ b/user/default/comfy.settings.json
@@ -1,5 +1,7 @@
 {
     "Comfy.Queue.History.Expanded": false,
     "Comfy.RightSidePanel.IsOpen": false,
-    "Comfy.Minimap.Visible": false
+    "Comfy.Minimap.Visible": false,
+    "Comfy.InstalledVersion": "1.39.14",
+    "Comfy.TutorialCompleted": true
 }
